<resources>
    <string name="app_name">Fithub</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="emailInputHint">Email</string>
    <string name="passwordInputHint">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logInBtnText">Login</string>
    <string name="register">Register</string>
    <string name="userlogged" translatable="false">false</string>
    <string name="RoutineTag">Routines</string>
    <string name="favouriteTag">Favorites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_activity_routine">Routine</string>
    <string name="action_settings">Settings</string>
    <string name="sets">set/s</string>
    <string name="exercise_cycle">Exercise Cycle</string>
    <string name="start_routine">Start Routine</string>
    <string name="fithub">Fithub</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search routines</string>
    <string name="search_title">Search</string>
    <string name="recent_routines">Your Recent Routines</string>
    <string name="latest_routines">Latest Routines</string>
    <string name="fithub_url" translatable="false">fithub.com</string>
    <string name="share_msg">Hey! I want to share my routine with you: </string>
    <string name="NotFoundMessage">Oops! Looks like we couldn\'t find what you were looking for.</string>
    <string name="qr_code_msg">This is the QR code for your routine, show it to a friend so he can scan it and train with you!</string>
    <string name="scan_your_code">Scan your code…</string>
    <string name="execution_view" translatable="false">Execution View</string>
    <string name="next_up">Next up</string>
    <string name="current_exercise">Current exercise</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="logout">Log Out</string>
    <string name="filter_title" translatable="false">Filter</string>
    <string name="camera_title" translatable="false">Camera</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="sort_spinner_title">Sort by:</string>
    <string name="spinner_creation_item">Creation Date</string>
    <string name="filter_dialog_title">Search Filters</string>
    <string name="spinner_difficulty_item">Difficulty</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="secs">Seconds</string>
    <string name="reps">Repetitions</string>
    <string name="accept">Accept</string>
    <string name="rating">Rating</string>
    <string name="when_do_you_want_to_be_notified_for_your_routine">When do you want to be notified for your routine?</string>
    <string name="sort_spinner_placeholder">Choose the category</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="order_spinner_placeholder">Choose the order</string>
    <string name="filter_spinner_default_item">Choose the filter</string>
    <string name="order_spinner_title">View:</string>
    <string name="time_to_train">It\'s time to train!</string>
    <string name="spinner_category_item">Category</string>
    <string name="spinner_sport_item">Sport</string>
    <string name="rookie_difficulty">Rookie</string>
    <string name="beginner_difficulty">Beginner</string>
    <string name="intermediate_difficulty">Intermediate</string>
    <string name="advanced_difficulty">Advanced</string>
    <string name="expert_difficulty">Expert</string>
    <string name="based_spinner_title">Based on:</string>
    <string name="filter_spinner_title">Filter by:</string>
    <string name="rating_spinner_placeholder">Choose the rating</string>
    <string name="empty_based_spinner_placeholder">Select a filter first</string>
    <string name="difficulty_spinner_placeholder">Choose the difficulty</string>
    <string name="no_recent_routines">You haven\'t trained recently!</string>
    <string name="success_routine">Routine finished successfully!</string>
    <string name="verif_success">Account verified successfully!</string>
    <string name="verif_fail">There was a problem verifying your account</string>
    <string name="rated">You have rated this routine</string>
    <string name="recommendation_title">Recommended Routine</string>
    <string name="set_up_notification">Set up notification</string>
    <string name="gen_qr">Generate QR</string>
    <string name="scan_qr">Scan your QR</string>
    <string name="profile_options">Profile options</string>
    <string name="screenshot">Screenshot</string>
    <string name="no_fav_routine_msg">Looks like you don\'t have favorite routines yet!</string>
    <string name="invalid_fn">The first name is not valid</string>
    <string name="invalid_ln">The last name is not valid</string>
    <string name="invalid_email">The email is not valid</string>
    <string name="invalid_password">The password is not valid</string>
    <string name="invalid_password_conf">The passwords do not match</string>
    <string name="invalid_credentials">Your username/password is not valid</string>
    <string name="error_params">Error in parameters</string>
    <string name="success_register">Register successful. Please confirm your email to proceed.</string>
    <string name="existing_account">This account exist already</string>
    <string name="my_routines">My Routines</string>
    <string name="first_name_error">The first name is not valid</string>
    <string name="last_name_error">The last name is not valid</string>
    <string name="success_profile_editing">Profile edited successfully</string>
    <string name="failure_profile_editing">Something went wrong editing your profile</string>
    <string name="kws_caption">kws_caption</string>
    <string name="menu_caption">menu_caption</string>
    <string name="digits_caption">digits_caption</string>
    <string name="phone_caption">phone_caption</string>
    <string name="forecast_caption">forecast_caption</string>


</resources>