<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/checkBox_mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/checkBox_wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/checkBox_fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/checkBox_tue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/checkBox_thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/checkBox_sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday" />

                <CheckBox
                    android:id="@+id/checkBox_sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />
            </LinearLayout>
        </LinearLayout>

        <TimePicker android:id="@+id/notif_tp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" >
        </TimePicker>



    </LinearLayout>

</ScrollView>