<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/current_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/when_do_you_want_to_be_notified_for_your_routine"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_btn_notif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#AE1212"
            android:text="@string/cancel_btn"
            app:layout_constraintEnd_toStartOf="@+id/accept_btn"
            app:layout_constraintTop_toBottomOf="@+id/notif_tp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox_mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/fithub_green"
                    android:text="@string/monday"
                    android:textColor="@color/fithub_green" />

                <CheckBox
                    android:id="@+id/checkBox_wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/fithub_green"
                    android:text="@string/wednesday"
                    android:textColor="@color/fithub_green" />

                <CheckBox
                    android:id="@+id/checkBox_fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/fithub_green"
                    android:text="@string/friday"
                    android:textColor="@color/fithub_green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox_tue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/fithub_green"
                    android:text="@string/tuesday"
                    android:textColor="@color/fithub_green" />

                <CheckBox
                    android:id="@+id/checkBox_thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/fithub_green"
                    android:text="@string/thursday"
                    android:textColor="@color/fithub_green" />

                <CheckBox
                    android:id="@+id/checkBox_sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/fithub_green"
                    android:text="@string/saturday"
                    android:textColor="@color/fithub_green" />

                <CheckBox
                    android:id="@+id/checkBox_sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/fithub_green"
                    android:text="@string/sunday"
                    android:textColor="@color/fithub_green" />
            </LinearLayout>
        </LinearLayout>

        <TimePicker
            android:id="@+id/notif_tp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#F1FBF7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@string/accept"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_btn_notif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cancel_btn_notif" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>