<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fithub_mobile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.fithub_mobile.ui.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.fithub_mobile.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fithub_mobile.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_editprofile"
            app:destination="@id/navigation_editprofile"
            app:popUpTo="@+id/navigation_profile"
            app:popUpToInclusive="false"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_editprofile"
        android:name="com.example.fithub_mobile.ui.profile.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_navigation_editprofile_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>