<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Login">

    <EditText
        android:id="@+id/loginEmailInput"
        android:layout_width="288dp"
        android:layout_height="43dp"
        android:background="@drawable/borderwithcolor"
        android:ems="10"
        android:hint="@string/emailInputHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/fithub_green"
        android:textColorHint="@color/fithub_green_darker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <EditText
        android:id="@+id/loginPasswordInput"
        android:layout_width="288dp"
        android:layout_height="43dp"
        android:background="@drawable/borderwithcolor"
        android:ems="10"
        android:hint="@string/passwordInputHint"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/fithub_green"
        android:textColorHint="@color/fithub_green_darker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInput"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="256dp"
        android:layout_height="78dp"
        android:onClick="logIn"
        android:text="@string/logInBtnText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textColor="@color/fithub_green"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginEmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>